<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/DepartmentList"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/Appointments"
            android:title="@string/menu_Appointments" />

        <item
            android:id="@+id/History"
            android:title="@string/menu_History" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/Settings"

                android:title="@string/settings" />
            <item
                android:id="@+id/LogOut"

                android:title="@string/Logout" />
        </menu>
    </item>

</menu>
