<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <ImageView
        android:background="@drawable/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        style="@style/inputBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputEditText"
            android:id="@+id/user_name"
            android:hint="User Name "
            android:textColorHint="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_passwd"
        style="@style/inputBox"
      >
        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputEditText"
            android:id="@+id/passwd"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimary"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/RememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="Remember me"/>
    </LinearLayout>
    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/buttonbackground"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20dp"
        android:hint="@string/Login"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:singleLine="true"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don’t have an account, "
            android:textColor="#000000"
            android:textSize="20dp"

            />
        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            />
    </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_marginTop="-50dp"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>

</LinearLayout>


